--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       font-family: 'Poppins', sans-serif;
       background-color: #152432;
       color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
@@ -91,6 +94,23 @@
       margin-top: 3rem;
     }
 
+    .content {
+      margin: 4rem auto;
+      max-width: 800px;
+    }
+
+    .content h2 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+
+    .content p {
+      font-size: 1.1rem;
+      line-height: 1.5;
+      margin-bottom: 1.5rem;
+    }
+
   </style>
 </head>
 <body>
@@ -100,15 +120,4 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div class="main">
-      <h1>Wallo</h1>
-      <p class="catchphrase">Unlock the future of university blockchain wallets</p>
-      <div class="background">
-        <p>
-          Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for
+        <li><a
