--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
       font-family: 'Poppins', sans-serif;
       background-color: #152432;
       color: #ffffff;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
     }
 
     header {
@@ -120,4 +117,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Features</a></li>
-        <li><a
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
