--- a/index.html
+++ b/index.html
@@ -91,23 +91,6 @@
       margin-top: 3rem;
     }
 
-    .content {
-      margin: 4rem auto;
-      max-width: 800px;
-    }
-
-    .content h2 {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
-
-    .content p {
-      font-size: 1.1rem;
-      line-height: 1.5;
-      margin-bottom: 1.5rem;
-    }
-
   </style>
 </head>
 <body>
@@ -121,3 +104,11 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+  </header>
+  <main>
+    <div class="main">
+      <h1>Wallo</h1>
+      <p class="catchphrase">Unlock the future of university blockchain wallets</p>
+      <div class="background">
+        <p>
+          Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for
