--- a/index.html
+++ b/index.html
@@ -15,35 +15,38 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #028090;
+      background-color: #05668d;
       color: #f0f3bd;
       overflow-x: hidden;
     }
 
     .container {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
-      flex-wrap: wrap;
-      padding: 5rem;
+      justify-content: center;
+      height: 100vh;
+      padding: 2rem;
     }
 
     .logo {
-      font-size: 4rem;
+      font-size: 6rem;
       font-weight: 600;
+      margin-bottom: 1rem;
     }
 
     .catchphrase {
       font-weight: 500;
       font-size: 1.5rem;
-      text-align: right;
+      text-align: center;
+      margin-bottom: 1rem;
     }
 
     .description {
       max-width: 800px;
-      margin: 2rem auto;
       font-size: 1.1rem;
       line-height: 1.5;
+      text-align: center;
     }
 
   </style>
@@ -52,9 +55,9 @@
   <div class="container">
     <div class="logo">Wallo</div>
     <div class="catchphrase">Unlock the future of university blockchain wallets</div>
-  </div>
-  <div class="description">
-    <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
+    <div class="description">
+      <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
+    </div>
   </div>
 </body>
 </html>
