--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       font-family: 'Poppins', sans-serif;
       background-color: #05668d;
       color: #f0f3bd;
-      overflow-x: hidden;
     }
 
     .container {
@@ -25,7 +24,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       padding: 2rem;
     }
 
@@ -47,6 +46,15 @@
       font-size: 1.1rem;
       line-height: 1.5;
       text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .additional-content {
+      max-width: 800px;
+      font-size: 1.1rem;
+      line-height: 1.5;
+      text-align: center;
+      margin-bottom: 2rem;
     }
 
   </style>
@@ -57,6 +65,9 @@
     <div class="catchphrase">Unlock the future of university blockchain wallets</div>
     <div class="description">
       <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
+    </div>
+    <div class="additional-content">
+      <p>Add more content here, and the page will become scrollable as the content increases in length. You can include information about features, pricing, testimonials, or any other relevant information to give visitors a better understanding of your platform.</p>
     </div>
   </div>
 </body>
