--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
-    div.scroll {
-        background-color: #fed9ff;
-        width: 600px;
-        height: 150px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        text-align: center;
-        padding: 20px;
-      }
     * {
       box-sizing: border-box;
     }
@@ -28,14 +19,15 @@
       color: #f0f3bd;
     }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 2rem;
-    }
+    div.scroll {
+        background-color: #fed9ff;
+        width: 600px;
+        height: 150px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        text-align: center;
+        padding: 20px;
+      }
 
     .logo {
       font-size: 6rem;
@@ -65,12 +57,13 @@
       text-align: center;
       margin-bottom: 2rem;
     }
+    
 
   </style>
 </head>
 <body>
   </body>
-  <div class="container">
+  <div class="scroll">
     <div class="logo">Wallo</div>
     <div class="catchphrase">Unlock the future of university blockchain wallets</div>
     <div class="description">
