--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       color: #f0f3bd;
     }
 
-    div.scroll {
-        background-color: #fed9ff;
-        width: 600px;
-        height: 150px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        text-align: center;
-        padding: 20px;
-      }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100%;
+      padding: 2rem;
+      overflow-y: auto;
+    }
 
     .logo {
       font-size: 6rem;
@@ -52,7 +52,7 @@
 
     .additional-content {
       max-width: 800px;
-      font-size: 1.1rem;
+      font-size: 1.1rem;z
       line-height: 1.5;
       text-align: center;
       margin-bottom: 2rem;
@@ -63,7 +63,7 @@
 </head>
 <body>
   </body>
-  <div class="scroll">
+  <div class="container">
     <div class="logo">Wallo</div>
     <div class="catchphrase">Unlock the future of university blockchain wallets</div>
     <div class="description">
