--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       margin-bottom: 2rem;
     }
     
+    html { overflow-y: scroll; }
+    body { position: absolute; }
+    
 
   </style>
 </head>
