--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
+    html,body{overflow-y: scroll; }
+
     * {
       box-sizing: border-box;
     }
@@ -57,9 +59,6 @@
       text-align: center;
       margin-bottom: 2rem;
     }
-    
-    html { overflow-y: scroll; }
-    body { position: absolute; }
     
 
   </style>
