--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
-    html,body{overflow-y: scroll; }
 
     * {
       box-sizing: border-box;
@@ -72,5 +71,7 @@
       <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
     </div>
   </div>
+  html { overflow-y: scroll; }
+  body { position: absolute; }
 </body>
 </html>
