--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
       margin-bottom: 2rem;
     }
     
+    .nft-benefits {
+      max-width: 800px;
+      font-size: 1.1rem;
+      line-height: 1.5;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    
 
   </style>
 </head>
@@ -70,6 +78,15 @@
     <div class="description">
       <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
     </div>
+    <div class="nft-benefits">
+      <h2>Why NFTs are a better solution for student rewards and credentials</h2>
+      <p>NFTs offer several advantages over traditional systems for student rewards and credentials:</p>
+      <ul>
+        <li><strong>Verifiability:</strong> NFTs are unique and easily verifiable, ensuring that each student's achievements are genuine and tamper-proof.</li>
+        <li><strong>Transferability:</strong> NFTs can be easily transferred between parties, allowing students to share their accomplishments with future employers, academic institutions, or other stakeholders.</li>
+        <li><strong>Efficiency:</strong> NFTs simplify the process of issuing, managing, and verifying student credentials, saving time and resources for both students and institutions.</li>
+        <li><strong
+     </div>
   </div>
 </body>
 </html>
