--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      height: 100%;
+    body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #05668d;
-      color: #f0f3bd;
+      background-color: #028090;
+      color: #ffffff;
     }
 
     header {
@@ -25,14 +24,13 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      background-color: #1C2E46;
+      background-color: #00a896;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     .logo {
-      font-size: 6rem;
+      font-size: 2.5rem;
       font-weight: 600;
-      margin-bottom: 1rem;
     }
 
     nav ul {
@@ -47,74 +45,136 @@
     }
 
     a {
-      color: #f0f3bd;
+      color: #ffffff;
       text-decoration: none;
     }
 
     a:hover {
-      color: #02c39a;
+      color: #f0f3bd;
     }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100%;
-      padding: 2rem;
-      overflow-y: auto;
+    .main {
+      text-align: center;
+      margin-top: 5rem;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+
+    .main h1 {
+      font-size: 3rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+
+    .main p {
+      font-size: 1.25rem;
+      line-height: 1.5;
+      margin-bottom: 2rem;
+    }
+
+    .main h2 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+
+    .main ul {
+      list-style-type: none;
+      padding: 0;
+      margin-bottom: 2rem;
+    }
+
+    .main ul li {
+      font-size: 1.25rem;
+      line-height: 1.5;
+      margin-bottom: 1rem;
+    }
+
+    .main blockquote {
+      font-size: 1.25rem;
+      line-height: 1.5;
+      font-style: italic;
+      margin: 0;
+      padding: 0;
+      margin-bottom: 1rem;
+    }
+
+    .main cite {
+      font-size: 1.1rem;
+      line-height: 1.5;
+      font-style: normal;
+      font-weight: 500;
+      display: block;
+      margin-bottom: 2rem;
     }
 
     .catchphrase {
       font-weight: 500;
       font-size: 1.5rem;
+      margin-top: 2rem;
       text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    .description {
-      max-width: 800px;
-      font-size: 1.1rem;
-      line-height: 1.5;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    .nft-benefits {
-      max-width: 800px;
-      font-size: 1.1rem;
-      line-height: 1.5;
-      text-align: center;
-      margin-bottom: 2rem;
     }
 
   </style>
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+    <h1>Wallo - Your University Wallet Service</h1>
+    <h2>Unlock the Future of University Blockchain Wallets</h2>
   </header>
-  <div class="container">
-    <div class="logo">Wallo</div>
-    <div class="catchphrase">Unlock the future of university blockchain wallets</div>
-    <div class="description">
-      <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for organizing, trading, and showcasing their achievements, Wallo revolutionizes the student experience within the blockchain space.</p>
-    </div>
-    <div class="nft-benefits">
-      <h2>Why NFTs are a better solution for student rewards and credentials</h2>
-      <p>NFTs offer several advantages over traditional systems for student rewards and credentials:</p>
+  <main>
+    <section>
+      <p>Wallo is a cutting-edge university wallet service that streamlines the way students collect and manage their NFTs. By providing an easy-to-use platform for both students and professors, we're revolutionizing the university experience.</p>
+    </section>
+    <section>
+      <h2>Why Wallo?</h2>
+      <p>Wallo is a game-changer in the world of student rewards and credentials. Our platform offers several advantages over traditional systems:</p>
       <ul>
-        <li><strong>Verifiability:</strong> NFTs are unique and easily verifiable, ensuring that each student's achievements are genuine and tamper-proof.</li>
-        <li><strong>Transferability:</strong> NFTs can be easily transferred between parties, allowing students to share their accomplishments with future employers, academic institutions, or other stakeholders.</li>
-        <li><strong>Efficiency:</strong> NFTs simplify the process of issuing, managing, and verifying student credentials, saving time and resources for both students and institutions.</li>
-     </div>
-  </div>
+        <li><strong>Digital and Secure:</strong> NFTs are blockchain-based digital assets that provide a secure way to store and manage academic achievements, rewards, and credentials. This eliminates the risk of loss, damage, or forgery associated with physical certificates and awards.</li>
+        <li><strong>Immutable and Verifiable:</strong> The blockchain technology behind NFTs ensures that the records are tamper-proof and easily verifiable. Students can prove their achievements without needing to request transcripts or documentation from their university.</li>
+        <li><strong>Easy to Share:</strong> Students can effortlessly share their NFTs with prospective employers, graduate schools, or peers, making it simple to showcase their accomplishments and skills.</li>
+        <li><strong>Engaging and Motivating:</strong> By turning achievements into collectible NFTs, we're fostering a fun and engaging environment that motivates students to excel academically and participate in university events and activities.</li>
+        <li><strong>Universally Accessible:</strong> The digital nature of NFTs means that students can access their achievements and credentials from anywhere at any time. All they need is their secure Wallo wallet.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Ease of Use for Universities and Students</h2>
+      <h3>For Universities:</h3>
+      <ul>
+        <li><strong>Seamless Integration:</strong> Our platform easily integrates with existing university systems, ensuring a smooth transition.</li>
+        <li><strong>Customizable NFT Templates:</strong> Professors can create and mint NFTs for various achievements using our customizable templates, making the process quick and straightforward.</li>
+        <li><strong>Simple Distribution:</strong> Distributing NFTs to students is as easy as sending an email. Once students receive their university email address, a new blockchain wallet is created automatically on the Polygon network.</li>
+      </ul>
+      <h3>For Students:</h3>
+      <ul>
+        <li><strong>Intuitive Interface:</strong> The Wallo wallet features a clean and intuitive interface, making it easy for students to manage and showcase their NFTs.</li>
+        <li><strong>Mobile-Friendly:</strong> Access your Wallo wallet on the go with our mobile-friendly design.</li>
+        <li><strong>Cross-Platform Compatibility:</strong> Wallo is compatible with popular NFT marketplaces, enabling students to trade or sell their NFTs if desired.</li>
+      </ul>
+      </h3>
+    <section>
+      <h2>Testimonials</h2>
+      <p>Here's what some of our users have to say about Wallo:</p>
+      <blockquote>
+        <p>"Thanks to Wallo, I can easily share my academic achievements with potential employers. It's a great way to showcase my skills and qualifications." - Sophia K., Computer Science Major</p>
+      </blockquote>
+      <blockquote>
+        <p>"Wallo has transformed the way our university recognizes student accomplishments. The platform is easy to use, and the students love collecting their NFTs." - Prof. Michael R., Department Head</p>
+      </blockquote>
+      <blockquote>
+        <p>"I've never been more motivated to excel in my studies! Collecting NFTs for my achievements has added an element of fun to my university experience." - Daniel T., Business Administration Major</p>
+      </blockquote>
+    </section>
+    <section>
+      <h2>Experience the Wallo difference for yourself!</h2>
+      <p>Sign up today and start your journey into the future of university blockchain wallets.</p>
+    </section>
+    <section>
+      <h2>Contact Us</h2>
+      <p>Have questions or need assistance? Our team is here to help. Get in touch with us through our Contact page, and let's revolutionize the university experience together.</p>
+    </section>
+  </main>
 </body>
 </html>
+        
