--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
 </head>
 <body>
   <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
     <h1>Wallo - Your University Wallet Service</h1>
     <h2>Unlock the Future of University Blockchain Wallets</h2>
   </header>
